nav dd menu fix overflow

--- a/index.css
+++ b/index.css
@@ -522,7 +522,6 @@ footer{
 
     .nav-ul-mobile li { 
         background-color: rgba(211, 255, 255, 0.5);
-        width: 100%;
         padding-left: 0;
         padding-right: 0;
     }
